ADD: Frontages.html ENH: updated index.html with some sample routes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+table,th,td
+{
+border:1px solid black;
+border-collapse:collapse;
+}
+th,td
+{
+padding:5px;
+}
+th
+{
+text-align:left;
+}
+</style>
+</head>
+<body>
+
+<table style="width:500px">
+<tr>
+  <th>General Route</th>
+  <th>Description</th>
+  <th>Milage range</th>
+</tr>
+<tr>
+  <td><a href = "honeybadger.html">Honey Badger</a></td>
+  <td>Heads down south. Should be done in the
+    morning as roads get busy </td>
+  <td>40-60</td>
+</tr>
+<tr>
+  <td><a href = "frontages.html">Frontages</a></td>
+  <td>I55 frontage roads, fairly flat. Good
+  even when outher routes get busy</td>
+  <td>20-40</td>
+</tr>
+</table>
+
+</body>
+</html>
