ENH: Added details on how to contribute to index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@ text-align:left;
   <td>20-40</td>
 </tr>
 </table>
+Pages hosted by <a href = 'https://github.com/'>  <img src='http://0.tqn.com/d/opensource/1/0/e/5/-/-/GitHub.jpg' height = 50></a>
+<p>
+  to Contribute either contact the <a href='mailto:scollis.acrf@gmail.com'>ride coordinator </a>
+  or get a GitHub account and <a href ='https://github.com/downersbike/open_routes'>fork the repo</a>
+<p>
+  Check out <a href = 'https://guides.github.com/activities/contributing-to-open-source/'> this guide </a>
+  on contributing to open source.
 
 </body>
 </html>
