--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@ text-align:left;
   even when outher routes get busy</td>
   <td>20-40</td>
 </tr>
+
+<tr>
+  <td><a href = "oswego.html">Oswego</a></td>
+  <td>South West. All roads finishing at the Daily
+  Grind Coffee shop (very club freindly). Good most
+  times of day (wide roads, light traffic). </td>
+  <td>20-40</td>
+</tr>
+
 </table>
 Pages hosted by <a href = 'https://github.com/'>  <img src='http://0.tqn.com/d/opensource/1/0/e/5/-/-/GitHub.jpg' height = 50></a>
 <p>
