ENH: More frontage rides

--- a/frontages.html
+++ b/frontages.html
@@ -39,6 +39,23 @@ text-align:left;
     cafe stop at Starbucks in Burr ridge</td>
   <td>25</td>
 </tr>
+<tr>
+  <td><a href = "http://www.mapmyride.com/routes/view/405062408">
+    Lemon Tree - Burr ridge - Lemon Tree
+    with international and 97th</a></td>
+  <td>Some more hills!</td>
+  <td>40</td>
+</tr>
+
+<tr>
+  <td><a href = "http://www.mapmyride.com/routes/view/392770312">
+    Lemon Tree - Burr ridge - Lemon Tree
+    with Woodward </a></td>
+  <td>Woodward is great for early morning paceline practice</td>
+  <td>30.5</td>
+</tr>
+
+
 </table>
 
 </body>
