ENH: Experimenting with images

--- a/oswego.html
+++ b/oswego.html
@@ -32,6 +32,8 @@ text-align:left;
   very surburban, good for a warm up.. When it heads west
   roads open up wide for a good leg burner. </td>
   <td>58.6</td>
+  <td> <a href = 'images/cafe318.jpg'> <img src='images/cafe318.jpg' height = 30></a>
+  </td>
 </tr>
 </table>
 
