--- a/oswego.html
+++ b/oswego.html
@@ -24,6 +24,7 @@ text-align:left;
   <th>Route</th>
   <th>Description</th>
   <th>Milage</th>
+  <th> Resources/images</th>
 </tr>
 <tr>
   <td><a href = "http://www.strava.com/routes/364356">
@@ -32,7 +33,7 @@ text-align:left;
   very surburban, good for a warm up.. When it heads west
   roads open up wide for a good leg burner. </td>
   <td>58.6</td>
-  <td> <a href = 'images/cafe318.jpg'> <img src='images/cafe318.jpg' height = 30></a>
+  <td> <a href = 'images/dailygrind.jpg'> <img src='images/dailygrind.jpg' height = 40></a>
   </td>
 </tr>
 </table>
