--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@ text-align:left;
   <td>South West. All roads finishing at the Daily
   Grind Coffee shop (very club freindly). Good most
   times of day (wide roads, light traffic). </td>
-  <td>20-40</td>
+  <td>20-80</td>
+</tr>
+<tr>
+  <td><a href = "batavia.html">Batavia and Geneva</a></td>
+  <td>North West. Many nice roads including around
+  Fermi national lab. Fairly flat but you can find some rollers.
+  Warrenville road near ideal for pacelines. </td>
+  <td>20-60</td>
 </tr>
 
 </table>
