ENH: Added ~60mile route to Geneva using the ET course

--- a/batavia.html
+++ b/batavia.html
@@ -19,11 +19,11 @@ text-align:left;
 </head>
 <body>
 
-<table style="width:500px">
+<table style="width:600px">
 <tr>
   <th>Route</th>
   <th>Description</th>
-  <th>Milage</th>
+  <th>Mileage/km-age</th>
   <th> Resources/images</th>
 </tr>
 <tr>
@@ -34,10 +34,26 @@ text-align:left;
   going up the Fox river trail. Suitable more for slower
   speeds as the trail can get quite crowded. 318 cafe is
   a great spot with good coffee and gelato. </td>
-  <td>67.7km/42m</td>
+  <td>67.7/42</td>
   <td> <a href = 'images/cafe318.jpg'> <img src='images/cafe318.jpg' height = 40></a>
   </td>
 </tr>
+<tr>
+  <td><a href = "http://www.strava.com/routes/422330">
+    Route to Batavia using Warrenville and Ferry then ET Tri course, into
+  Geneva and back via Mack. </a></td>
+  <td> Route to Batavia via Ferry including the overpass hump climb.
+  refuel and bathroom stop at 7/11 in Batavia before carefully riding through
+  town. Ride between deerpath road and Bliss is nasty.. 50mph and narrow.. but
+  worth it! Bliss is.. well bliss.. a stunner of a road. Take Western ave
+  into Geneva for a Latte and Gelato. Route uses Fox river trail to warm up
+  then Mack road return (<b>NOTE: Brief riders about taking the trail when
+  Mack swings to the left or they will get lost</b>) </td>
+  <td>94.4/58.7</td>
+  <td> <a href = 'images/cafe318.jpg'> <img src='images/cafe318.jpg' height = 40></a>
+  </td>
+</tr>
+
 </table>
 
 </body>
